<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="jp.co.yumemi.android.code_check.models.LocalGitHubRepoObject" />

        <variable
            name="isExpanded"
            type="Boolean" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/list_card_view_corner_radius"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/page_padding"
            android:paddingEnd="@dimen/page_padding">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ownerIconView"
                    android:layout_width="@dimen/profile_icon_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/recycle_view_margin"
                    android:adjustViewBounds="true"
                    app:imageUrl="@{item.avatarUrl}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="79dp" />

                <LinearLayout
                    android:id="@+id/contextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mini_vertical_margin"
                    android:layout_marginBottom="@dimen/mini_vertical_margin"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/forwardArrowIcon"
                    app:layout_constraintStart_toEndOf="@+id/guideline1"
                    app:layout_constraintTop_toTopOf="parent">

                    <include
                        android:id="@+id/nameLayout"
                        layout="@layout/content_with_label_large_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/centerHorizontalCenterGuid"
                        app:layout_constraintEnd_toStartOf="@+id/centerVerticalGuid"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:label='@{"Name"}'
                        bind:value="@{item.name}" />

                    <include
                        layout="@layout/content_with_label_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/centerHorizontalCenterGuid"
                        app:layout_constraintEnd_toStartOf="@+id/centerVerticalGuid"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:label='@{"Type"}'
                        bind:value="@{item.ownerType}" />
                </LinearLayout>


                <ImageView
                    android:id="@+id/forwardArrowIcon"
                    android:layout_width="@dimen/forward_arrow_size"
                    android:layout_height="@dimen/forward_arrow_size"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/next"
                    android:contentDescription="@string/forward_arrow_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandedContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/mini_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


                <!-- Delete button -->
                <ImageButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="@dimen/image_button_size"
                    android:layout_height="@dimen/image_button_size"
                    android:layout_marginTop="@dimen/mini_vertical_margin"
                    android:background="@drawable/image_button_bg"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/bin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/fav_delete_icon" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="80dp" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/accent_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/separator">


                    <include
                        android:id="@+id/include2"
                        layout="@layout/content_with_label_layout"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="@dimen/content_margin_top"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/centerVerticalGuide25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:label='@{"Starts"}'
                        bind:value="@{item.stargazersCount.toString()}" />


                    <include
                        layout="@layout/content_with_label_layout"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="@dimen/content_margin_top"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/centerVerticalGuide50"
                        app:layout_constraintStart_toEndOf="@+id/centerVerticalGuide25"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:label='@{"Forks"}'
                        bind:value="@{item.forksCount.toString()}" />

                    <include
                        android:id="@+id/include"
                        layout="@layout/content_with_label_layout"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/content_margin_top"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/centerVerticalGuide75"
                        app:layout_constraintStart_toEndOf="@+id/centerVerticalGuide50"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:label='@{"Watchers"}'
                        bind:value="@{item.watchersCount.toString()}" />

                    <include
                        layout="@layout/content_with_label_layout"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/content_margin_top"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/centerVerticalGuide75"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:label='@{"Open Issues"}'

                        bind:value="@{item.openIssuesCount.toString()}" />


                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/centerVerticalGuide25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.25" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/centerVerticalGuide50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.50" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/centerVerticalGuide75"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.75" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>