...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dialogMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_content_border_bg"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dialog_horizontal_padding"
            android:paddingTop="@dimen/dialog_top_padding"
...
                android:gravity="center"
                android:paddingTop="@dimen/vertical_margin"
                android:paddingBottom="@dimen/vertical_margin"
                android:text="@{dialogMessage}" />

            <Button
                android:id="@+id/button"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/ok" />
...
